--- a/src/main/resources/assets/connors_mod/lang/en_us.json
+++ b/src/main/resources/assets/connors_mod/lang/en_us.json
@@ -23,5 +23,12 @@
   "item.connors_mod.green_lightsaber": "Green Lightsaber",
   "item.connors_mod.purple_lightsaber": "Purple Lightsaber",
   "item.connors_mod.yellow_lightsaber": "Yellow Lightsaber",
-  "item.connors_mod.white_lightsaber": "White Lightsaber"
+  "item.connors_mod.white_lightsaber": "White Lightsaber",
+  "block.connors_mod.red_ore": "Red Kyber Ore",
+  "block.connors_mod.blue_ore": "Blue Kyber Ore",
+  "block.connors_mod.green_ore": "Green Kyber Ore",
+  "block.connors_mod.purple_ore": "Purple Kyber Ore",
+  "block.connors_mod.yellow_ore": "Yellow Kyber Ore",
+  "block.connors_mod.white_ore": "White Kyber Ore"
+
 }
